
add_executable(test_mmc_rpi3b_lib_arith common/test_arith.cpp)
add_executable(test_mmc_rpi3b_lib_control0 mmc_driver/bcm_emmc_regs/test_control0.cpp)
add_executable(test_mmc_rpi3b_lib_control1 mmc_driver/bcm_emmc_regs/test_control1.cpp)
add_executable(test_mmc_rpi3b_lib_interrupt mmc_driver/bcm_emmc_regs/test_interrupt.cpp)
add_executable(test_mmc_rpi3b_lib_cmdtm mmc_driver/bcm_emmc_regs/test_cmdtm.cpp)
add_executable(test_mmc_rpi3b_lib_blksizecnt mmc_driver/bcm_emmc_regs/test_blksizecnt.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_emmc_regs mmc_driver/test_bcm_emmc_regs.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_emmc mmc_driver/test_bcm_emmc.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci mmc_driver/test_sdhci.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_cmd mmc_driver/sdhci/test_sdhci_cmd.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_cmds mmc_driver/sdhci/test_sdhci_cmds.cpp)
add_executable(test_mmc_rpi3b_lib_sdhci_resp_r1 mmc_driver/sdhci/test_sdhci_resp_r1.cpp)
add_executable(test_mmc_rpi3b_lib_sdcard mmc_driver/test_sdcard.cpp)
add_executable(test_mmc_rpi3b_lib_sdcard_data_v2 mmc_driver/sdcard/sdcard_data/test_sdcard_data_v2.cpp)
add_executable(test_mmc_rpi3b_lib_result_test lib_result/test_result_test.cpp)
add_executable(test_mmc_rpi3b_lib_result_prod lib_result/test_result_prod.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_timer_regs timer_driver/test_bcm_timer_regs.cpp)
add_executable(test_mmc_rpi3b_lib_bcm_timer timer_driver/test_bcm_timer.cpp)
add_executable(test_mmc_rpi3b_lib_scr mmc_driver/sdcard/test_scr.cpp)
add_executable(test_mmc_rpi3b_lib_blk_shared_data_queue lib_sddf_blk/test_blk_shared_data_queue.cpp)
add_executable(test_mmc_rpi3b_lib_blk_request_queue lib_sddf_blk/test_blk_request_queue.cpp)
add_executable(test_mmc_rpi3b_lib_blk_response_queue lib_sddf_blk/test_blk_response_queue.cpp)
add_executable(test_mmc_rpi3b_lib_blk_response lib_sddf_blk/test_blk_response.cpp)
add_executable(test_mmc_rpi3b_lib_blk_request lib_sddf_blk/test_blk_request.cpp)
add_executable(test_mmc_rpi3b_lib_blk_shared_data_buf lib_sddf_blk/test_blk_shared_data_buf.cpp)
add_executable(test_mmc_rpi3b_lib_mmc_driver_client mmc_driver_client/test_mmc_driver_client.cpp)

add_google_test(test_mmc_rpi3b_lib_arith mmc_rpi3b_lib_arith)
add_google_test(test_mmc_rpi3b_lib_control0 mmc_rpi3b_lib_control0)
add_google_test(test_mmc_rpi3b_lib_control1 mmc_rpi3b_lib_control1)
add_google_test(test_mmc_rpi3b_lib_interrupt mmc_rpi3b_lib_interrupt)
add_google_test(test_mmc_rpi3b_lib_cmdtm mmc_rpi3b_lib_cmdtm)
add_google_test(test_mmc_rpi3b_lib_blksizecnt mmc_rpi3b_lib_blksizecnt)
add_google_test(test_mmc_rpi3b_lib_bcm_emmc_regs mmc_rpi3b_lib_bcm_emmc_regs)
add_google_test(test_mmc_rpi3b_lib_bcm_emmc mmc_rpi3b_lib_bcm_emmc)
add_google_test(test_mmc_rpi3b_lib_sdhci mmc_rpi3b_lib_sdhci)
add_google_test(test_mmc_rpi3b_lib_sdhci_cmd mmc_rpi3b_lib_sdhci_cmd)
add_google_test(test_mmc_rpi3b_lib_sdhci_cmds mmc_rpi3b_lib_sdhci_cmds)
add_google_test(test_mmc_rpi3b_lib_sdhci_resp_r1 mmc_rpi3b_lib_sdhci_resp_r1)
add_google_test(test_mmc_rpi3b_lib_sdcard mmc_rpi3b_lib_sdcard)
add_google_test(test_mmc_rpi3b_lib_sdcard_data_v2 mmc_rpi3b_lib_sdcard_data_v2)
add_google_test(test_mmc_rpi3b_lib_result_test mmc_rpi3b_lib_result_test)
add_google_test(test_mmc_rpi3b_lib_result_prod mmc_rpi3b_lib_result_prod)
add_google_test(test_mmc_rpi3b_lib_bcm_timer_regs mmc_rpi3b_lib_bcm_timer_regs)
add_google_test(test_mmc_rpi3b_lib_bcm_timer mmc_rpi3b_lib_bcm_timer)
add_google_test(test_mmc_rpi3b_lib_scr mmc_rpi3b_lib_scr)
add_google_test(test_mmc_rpi3b_lib_blk_shared_data_queue mmc_rpi3b_lib_blk_shared_data_queue)
add_google_test(test_mmc_rpi3b_lib_blk_request_queue mmc_rpi3b_lib_blk_request_queue)
add_google_test(test_mmc_rpi3b_lib_blk_response_queue mmc_rpi3b_lib_blk_response_queue)
add_google_test(test_mmc_rpi3b_lib_blk_response mmc_rpi3b_lib_blk_response)
add_google_test(test_mmc_rpi3b_lib_blk_request mmc_rpi3b_lib_blk_request)
add_google_test(test_mmc_rpi3b_lib_blk_shared_data_buf mmc_rpi3b_lib_blk_shared_data_buf)
add_google_test(test_mmc_rpi3b_lib_mmc_driver_client mmc_rpi3b_lib_mmc_driver_client)

target_link_libraries(
        test_mmc_rpi3b_lib_bcm_emmc
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_bcm_emmc_regs
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_bcm_timer
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdhci
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdcard
        lib_fff
)
target_link_libraries(
        test_mmc_rpi3b_lib_sdcard_data_v2
        lib_fff
)
